# rc-mongo-api

./: .gitignore  Cargo.toml  Dockerfile  readme.md
src/: main.rs
src/api/: health_check.rs  mod.rs  recipe_api.rs  util.rs
src/models/: app_data.rs  mod.rs  recipe_model.rs
src/repository/: mongo_repo.rs
