[package]
name = "rc-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = "1.0.197"
serde_json = "1.0.114"
dotenv = "0.15.0"
futures = "0.3.30"
env_logger = "0.11.3"
log = "0.4.21"
firebase-auth = "0.4.2"

[dependencies.mongodb]
version = "2.8.1"
